--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,13 +1,20 @@
+ion-label {
+    font-weight: 400;
+}
+
 .center-absolute {
     display: flex;
     justify-content: center;
-    /* horizontal */
     align-items: center;
-    /* vertical */
-    height: 150px;
-    /* ocupa toda la pantalla */
+    height: 90px;
+    margin-bottom: 15px;
 }
- 
+
+.height-width-100 {
+    height: 130px;
+    width: 165px;
+}
+
 .page-title {
     margin: 0;
     font-weight: bold;
@@ -21,7 +28,7 @@
     border: .1px solid rgba(3, 3, 3, 0);
     padding-bottom: 20px;
     background: var(--app-background-splash);
-    box-shadow: 0 4px 6px -2px rgba(0,0,0,0.3);
+    box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
     border-bottom-left-radius: 25%;
 }
 
@@ -29,4 +36,8 @@
     height: 60px;
     padding: 5%;
     padding-bottom: 0%;
+}
+
+ion-avatar {
+    --border-radius: 4px;
 }
