--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,19 +1,149 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Ordenes
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Page Order</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="splash padding-5">
 
-  <p>
-    Order
-  </p>
+    <div class="tilte-page">
+      <ion-text>
+        <h1 class="title-primary-bold">Gestion Remesas</h1>
+      </ion-text>
+    </div>
+  </div>
+
+  <!-- btn-actions-icons -->
+  <div class="subtilte-page">
+    <ion-text>
+      <h1 class="subtitle-primary-bold">Otras Opciones</h1>
+    </ion-text>
+  </div>
+  <div #btnIcons class="content-parent-btns">
+    <div class="content-btn-icon">
+      <ion-card mode="ios" class="card-btn-icon ion-activatable ripple-parent rectangle">
+        <ion-card-content (click)="openModalIcons(1)" style="padding: 8px;">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-thumbnail class="content-thumbnail">
+            <img alt="Remesas" src="../../assets/logos/remesas2026.svg" />
+          </ion-thumbnail>
+        </ion-card-content>
+      </ion-card>
+      <ion-text color="dark">
+        <small class="small-text-icon">Enviar</small>
+      </ion-text>
+    </div>
+    <div class="content-btn-icon">
+      <ion-card mode="ios" class="card-btn-icon ion-activatable ripple-parent rectangle">
+        <ion-card-content (click)="openModalIcons(1)" style="padding: 8px;">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-thumbnail class="content-thumbnail">
+            <img alt="Remesas" src="../../assets/logos/remesas2026.svg" />
+          </ion-thumbnail>
+        </ion-card-content>
+      </ion-card>
+      <ion-text color="dark">
+        <small class="small-text-icon">Pagar</small>
+      </ion-text>
+    </div>
+    <div class="content-btn-icon">
+      <ion-card mode="ios" class="card-btn-icon ion-activatable ripple-parent rectangle">
+        <ion-card-content (click)="openModalIcons(1)" style="padding: 8px;">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-thumbnail class="content-thumbnail">
+            <img alt="Remesas" src="../../assets/logos/remesas2026.svg" />
+          </ion-thumbnail>
+        </ion-card-content>
+      </ion-card>
+      <ion-text color="dark">
+        <small class="small-text-icon">Solicitar</small>
+      </ion-text>
+    </div>
+    <div class="content-btn-icon">
+      <ion-card mode="ios" class="card-btn-icon ion-activatable ripple-parent rectangle">
+        <ion-card-content (click)="openModalIcons(1)" style="padding: 8px;">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-thumbnail class="content-thumbnail">
+            <img alt="Remesas" src="../../assets/logos/remesas2026.svg" />
+          </ion-thumbnail>
+        </ion-card-content>
+      </ion-card>
+      <ion-text color="dark">
+        <small class="small-text-icon">Depositar</small>
+      </ion-text>
+    </div>
+  </div>
+  <!-- MODAL ENVIO -->
+  <ion-modal #modalIcons mode="ios" style="--border-radius: 10px;" [canDismiss]="canDismiss" [presentingElement]="pageContainer">
+    <ng-template>
+
+      <ion-item color="dark">
+        <ion-label class="label-details">Detalles Accion</ion-label>
+        <ion-button color="danger" (click)="modalIcons.dismiss()">X</ion-button>
+      </ion-item>
+
+      <ion-content color="dark" class="ion-padding">
+        <p>Contenido del modal</p>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+
+
+
+
+  <!-- items-transactions -->
+  <div class="subtilte-page">
+    <ion-text>
+      <h1 class="subtitle-primary-bold">Transacciones</h1>
+    </ion-text>
+  </div>
+  <ion-searchbar mode="ios" placeholder="Buscar"></ion-searchbar>
+  <!-- list-transactions -->
+  <div #page>
+    @for (item of [1,2,3,4,5,6,7,8,9,0]; track $index) {
+    <div>
+      <ion-card class="card-contr item-transaction">
+        <ion-ripple-effect></ion-ripple-effect>
+
+        <ion-card-content>
+          <ion-item lines="none" style="margin-top: 3px;">
+            <ion-avatar class="profile-transaction">
+              <img class="img-profile" alt="perfil-transaction"
+                src="../../../../assets/testing/photo-maracay-test.jpeg" />
+            </ion-avatar>
+
+            <div class="header-row">
+              <div class="left-content">
+                <ion-label class="label-notify">Principal Maracay</ion-label>
+                <ion-label class="item-label-description">
+                  Luis Avarez - P1
+                </ion-label>
+              </div>
+              <div class="right-content ion-activatable ripple-parent rounded-rectangle">
+                <ion-button color="light" (click)="openModal(item)" size="small" mode="ios">
+                  ver mas
+                </ion-button>
+
+              </div>
+            </div>
+          </ion-item>
+        </ion-card-content>
+
+      </ion-card>
+    </div>
+    }
+
+    <!-- MODAL DETALLE -->
+    <ion-modal mode="ios" style="--border-radius: 10px;" #modal [canDismiss]="canDismiss" [presentingElement]="page">
+      <ng-template>
+
+        <ion-item color="dark">
+          <ion-label class="label-details">Detalles Transaccion</ion-label>
+          <ion-button color="danger" (click)="modal.dismiss()">X</ion-button>
+        </ion-item>
+
+        <ion-content color="dark" class="ion-padding">
+          <p>Contenido del modal</p>
+        </ion-content>
+      </ng-template>
+    </ion-modal>
+
+  </div>
+
 </ion-content>
