--- a/src/app/order/order.component.scss
+++ b/src/app/order/order.component.scss
@@ -34,12 +34,14 @@
 .card-btn-icon {
     margin: 0;
     box-shadow: none;
-    border: 1px solid #f0f0f0;
+    box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
+    
 }
 
 .content-thumbnail {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
+    padding: 2px;
 }
 
 .small-text-icon {
@@ -85,7 +87,7 @@ ion-list {
 .title-primary-bold {
     margin: 0;
     font-weight: bold;
-    font-size: xx-large;
+    font-size: x-large;
 }
 
 .card-contr {
